/*â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
 FILE: SimpleTradingScenario.java â€” SUGAR API: SIMPLE TRADING (EASIEST START)

 LEVEL: 3 (Sugar API)
 DIFFICULTY: Beginner

 PURPOSE:
   The SIMPLEST complete trading example using MT5Sugar!
   Perfect for beginners - shows full workflow:
   â€¢ buyMarket() - open BUY position with SL/TP in one call
   â€¢ modifyPosition() - change SL/TP of open position
   â€¢ closePosition() - close by ticket number
   â€¢ getBid/getAsk/getSpread() - direct market data access

 ğŸ¯ WHY USE SUGAR API FOR SIMPLE TRADING?

   SERVICE API (Manual):                   SUGAR API (This Example):
   â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
   // Get price                            long ticket =
   tick = service.quote(symbol);            sugar.buyMarket(
   price = tick.getAsk();                     symbol, 0.01, sl, tp,
   // Build OrderSendRequest               // Done! 1 line to open!
   request.setVolume(0.01)
   request.setPrice(price)
   request.setSl(sl).setTp(tp)
   ticket = service.orderSend(req)
     .getOrder();

 ğŸ“š WHAT YOU'LL LEARN:
   â€¢ buyMarket/sellMarket - open positions in 1 line
   â€¢ modifyPosition() - update SL/TP
   â€¢ closePosition() - close by ticket
   â€¢ normalizePrice() - ensure price has correct digits
   â€¢ getBid/getAsk/getSpread/getPoint() - direct getters

 COMPLETE TRADING WORKFLOW:
   1. Get market info (bid/ask/spread)
   2. Open position with SL/TP
   3. Modify position (tighten SL, move to breakeven, etc.)
   4. Check position status
   5. Close position

 USAGE:
   run.bat 7  (or .\run.bat 7)                             # Via run.bat
   mvnd exec:java -Dexec.args="7"           # Via Maven
â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•*/

package examples.sugar;

import io.metarpc.mt5.MT5Account;
import io.metarpc.mt5.MT5Service;
import io.metarpc.mt5.MT5Sugar;
import io.metarpc.mt5.exceptions.ApiExceptionMT5;

import java.io.InputStream;

public class SimpleTradingScenario {

    public static void main(String[] args) {
        // Set UTF-8 encoding
        try {
            System.setOut(new java.io.PrintStream(System.out, true, "UTF-8"));
        } catch (Exception e) {
            // Fallback if UTF-8 not available
        }

        System.out.println("\n+============================================================+");
        System.out.println("|  SCENARIO 1: SIMPLE TRADING WITH MODIFICATION            |");
        System.out.println("+============================================================+\n");

        try {
            // Load credentials
            InputStream is = SimpleTradingScenario.class.getClassLoader().getResourceAsStream("appsettings.json");
            if (is == null) {
                is = new java.io.FileInputStream("appsettings.json");
            }
            String json = new String(is.readAllBytes());
            is.close();

            // Parse nested JSON structure: MT5Connections.FxProDemo.*
            String fxProDemoSection = json.split("\"FxProDemo\":\\s*\\{")[1].split("\\}")[0];

            long user = Long.parseLong(fxProDemoSection.split("\"user\":\\s*")[1].split(",")[0].trim());
            String password = fxProDemoSection.split("\"password\":\\s*\"")[1].split("\"")[0];
            String grpcServer = fxProDemoSection.contains("\"grpcServer\"")
                ? fxProDemoSection.split("\"grpcServer\":\\s*\"")[1].split("\"")[0]
                : null;

            System.out.println("Configuration loaded: user=" + user);
            System.out.println();

            // Create full stack: Account â†’ Service â†’ Sugar
            MT5Account account = new MT5Account(user, password, grpcServer, null);
            MT5Service service = new MT5Service(account);
            MT5Sugar sugar = new MT5Sugar(service);

            // Connect
            System.out.println("â–º Connecting to MT5...");
            account.connectByServerName("FxPro-MT5 Demo", "EURUSD");
            System.out.println("âœ“ Connected\n");

            String symbol = "EURUSD";

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // STEP 1: GET SYMBOL INFORMATION
            //
            // SUGAR BENEFIT: Direct getters - no API calls needed!
            //   â€¢ getBid(symbol)    â†’ double (not service.quote().getBid())
            //   â€¢ getAsk(symbol)    â†’ double
            //   â€¢ getSpread(symbol) â†’ int
            //   â€¢ getPoint(symbol)  â†’ double
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

            section("STEP 1: Symbol Information");

            double bid = sugar.getBid(symbol);
            double ask = sugar.getAsk(symbol);
            int spread = sugar.getSpread(symbol);
            int digits = sugar.getDigits(symbol);
            double point = sugar.getPoint(symbol);

            System.out.println("  Symbol: " + symbol);
            System.out.println("  Bid: " + String.format("%." + digits + "f", bid));
            System.out.println("  Ask: " + String.format("%." + digits + "f", ask));
            System.out.println("  Spread: " + spread + " points");
            System.out.println("  Digits: " + digits);
            System.out.println("  Point: " + point);
            System.out.println();

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // STEP 2: OPEN BUY POSITION WITH SL/TP
            //
            // SUGAR BENEFIT: buyMarket(symbol, volume, sl, tp, comment)
            //   â†’ Opens BUY position in 1 line!
            //   â†’ Automatically gets Ask price
            //   â†’ Sets SL/TP in same call
            //   â†’ Returns ticket number directly
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

            section("STEP 2: Open BUY Position");

            double volume = 0.01;
            double stopLoss = sugar.normalizePrice(symbol, ask - 50 * point);  // 50 points SL
            double takeProfit = sugar.normalizePrice(symbol, ask + 100 * point); // 100 points TP

            System.out.println("  Opening BUY " + volume + " lot " + symbol);
            System.out.println("  Entry: " + String.format("%." + digits + "f", ask));
            System.out.println("  Stop Loss: " + String.format("%." + digits + "f", stopLoss) + " (-50 points)");
            System.out.println("  Take Profit: " + String.format("%." + digits + "f", takeProfit) + " (+100 points)");
            System.out.println();

            long ticket = sugar.buyMarket(symbol, volume, stopLoss, takeProfit, "Sugar Demo");

            System.out.println("  âœ“ Position opened!");
            System.out.println("  Ticket: " + ticket);
            System.out.println();

            // Wait a moment
            Thread.sleep(1000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // STEP 3: MODIFY SL CLOSER TO ENTRY (DEMO)
            //
            // SUGAR BENEFIT: modifyPosition(ticket, newSL, newTP)
            //   â†’ Pass null for TP to keep current value
            //   â†’ No need to fetch current position first
            //   â†’ Simple 1-line modification
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

            section("STEP 3: Modify Stop Loss");

            double currentBid = sugar.getBid(symbol);
            double newSL = sugar.normalizePrice(symbol, ask - 30 * point); // Tighter SL: -30 points instead of -50

            System.out.println("  Current Bid: " + String.format("%." + digits + "f", currentBid));
            System.out.println("  Original SL: " + String.format("%." + digits + "f", stopLoss) + " (-50 points)");
            System.out.println("  New SL: " + String.format("%." + digits + "f", newSL) + " (-30 points)");
            System.out.println();

            sugar.modifyPosition(ticket, newSL, null); // Keep current TP

            System.out.println("  âœ“ Position modified!");
            System.out.println("  SL tightened from -50 to -30 points");
            System.out.println();

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // STEP 4: CHECK CURRENT POSITIONS
            //
            // SUGAR BENEFIT: Simple boolean/int getters
            //   â€¢ hasOpenPositions() â†’ boolean
            //   â€¢ getPositionCount() â†’ int
            //   â€¢ getProfit()        â†’ double (total P/L)
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

            section("STEP 4: Check Positions");

            boolean hasPositions = sugar.hasOpenPositions();
            int positionCount = sugar.getPositionCount();
            double currentProfit = sugar.getProfit();

            System.out.println("  Has open positions: " + (hasPositions ? "Yes" : "No"));
            System.out.println("  Position count: " + positionCount);
            System.out.println("  Current P/L: $" + String.format("%.2f", currentProfit));

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // STEP 5: CLOSE POSITION
            //
            // SUGAR BENEFIT: closePosition(ticket)
            //   â†’ Closes position by ticket in 1 line
            //   â†’ Automatically handles Bid/Ask for BUY/SELL
            //   â†’ No need to build close request manually
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

            section("STEP 5: Close Position");

            System.out.println("  Closing position #" + ticket + "...");

            sugar.closePosition(ticket);

            System.out.println("  âœ“ Position closed!");
            System.out.println();

            // Final check
            positionCount = sugar.getPositionCount();
            System.out.println("  Remaining positions: " + positionCount);

            account.disconnect();

            System.out.println("+============================================================+");
            System.out.println("|  >> SCENARIO COMPLETED SUCCESSFULLY                      |");
            System.out.println("+============================================================+\n");

        } catch (ApiExceptionMT5 e) {
            System.err.println("\nâœ— MT5 Error: " + e.getMessage());
            System.err.println("  Error Code: " + e.getErrorCode());
            e.printStackTrace();
        } catch (Exception e) {
            System.err.println("\nâœ— Error: " + e.getMessage());
            e.printStackTrace();
        }

        System.out.println("\nPress Enter to exit...");
        try {
            System.in.read();
        } catch (Exception ignored) {
        }
    }

    private static void section(String title) {
        System.out.println("------------------------------------------------------------");
        System.out.println(" " + title);
        System.out.println("------------------------------------------------------------");
        System.out.println();
    }
}

/*â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

                    SUGAR API: SIMPLEST TRADING INTERFACE

â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

Simple Trading made EASY with MT5Sugar:

â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”
â”‚ OPERATION            â”‚ SERVICE API              â”‚ SUGAR API                 â”‚
â”œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¤
â”‚ Open BUY position    â”‚ // Get price             â”‚ long ticket =             â”‚
â”‚                      â”‚ tick = service.quote()   â”‚   sugar.buyMarket(        â”‚
â”‚                      â”‚ price = tick.getAsk()    â”‚     symbol, 0.01, sl, tp, â”‚
â”‚                      â”‚ // Build request...      â”‚     "comment");           â”‚
â”‚                      â”‚ request.setVolume(0.01)  â”‚ // Done! 1 line!          â”‚
â”‚                      â”‚ request.setPrice(price)  â”‚                           â”‚
â”‚                      â”‚ request.setSl/setTp...   â”‚                           â”‚
â”‚                      â”‚ ticket = service         â”‚                           â”‚
â”‚                      â”‚   .orderSend(req)        â”‚                           â”‚
â”‚                      â”‚   .getOrder()            â”‚                           â”‚
â”œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¤
â”‚ Modify position      â”‚ // Build modify request  â”‚ sugar.modifyPosition(     â”‚
â”‚                      â”‚ request.setTicket(ticket)â”‚   ticket, newSL, null);   â”‚
â”‚                      â”‚ request.setNewSl(newSL)  â”‚ // Done! 1 line!          â”‚
â”‚                      â”‚ service.orderModify(req) â”‚                           â”‚
â”œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¤
â”‚ Close position       â”‚ // Build close request   â”‚ sugar.closePosition(      â”‚
â”‚                      â”‚ service.orderClose(      â”‚   ticket);                â”‚
â”‚                      â”‚   ticket, volume, slip)  â”‚ // Done! 1 line!          â”‚
â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜

KEY SUGAR API METHODS USED:
  âœ“ buyMarket()       - open BUY position with SL/TP in 1 call
  âœ“ sellMarket()      - open SELL position with SL/TP in 1 call
  âœ“ modifyPosition()  - update SL/TP of open position
  âœ“ closePosition()   - close position by ticket
  âœ“ normalizePrice()  - ensure price has correct digits
  âœ“ getBid/getAsk()   - direct price access (no API calls)
  âœ“ getSpread/getPoint/getDigits() - direct symbol info

WHEN TO USE SUGAR API:
  â†’ For simple trading scenarios (open, modify, close)
  â†’ When you want readable, maintainable code
  â†’ For quick prototyping of trading ideas
  â†’ When Service API feels too verbose


â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

                               HOW TO RUN

â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

1. Via run.bat (Recommended - fast):
   run.bat 7  or  .\run.bat 7

2. Via run-clean.bat (If run.bat fails with compilation errors):
   run-clean.bat 7  or  .\run-clean.bat 7
   â†’ Stops daemon, removes target/, recompiles from scratch
   â†’ Use this if you see "Unresolved compilation problem" errors

3. Via Maven:
   mvnd compile exec:java -Dexec.args="7"


â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

                              NEXT STEPS

â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

1. Example 8 (Risk Management Scenario)
   â†’ Fixed $ risk per trade with auto volume calculation
   â†’ buyByRisk(), calculateVolume()
   â†’ run.bat 8

2. Example 9 (Grid Trading Scenario)
   â†’ Multiple pending orders at price levels
   â†’ buyLimitPoints(), sellLimitPoints(), cancelAll()
   â†’ run.bat 9

3. Example 10 (Orchestrators - Advanced)
   â†’ Full-featured trading strategies
   â†’ Trend Following, Scalping with built-in risk control
   â†’ run.bat 10

â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•*/